--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "detox:android:release": "detox build -c android.emu.release && detox test -R 1 -c android.emu.release",
     "detox:ios": "detox build -c ios.sim.debug && detox test -R 1 -c ios.sim.debug --bail",
     "detox:ios:release": "detox build -c ios.sim.release && detox test -R 1 -c ios.sim.release --bail",
-    "ds": "next dev src/design-system/docs",
+    "ds": "cd src/design-system/docs && next dev",
     "fast": "yarn setup && yarn install-pods-fast",
     "gradle": "cd android && ./gradlew",
     "hardhat": "source .env && hardhat node --fork ${ETHEREUM_MAINNET_RPC_DEV}",
@@ -254,6 +254,7 @@
     "@babel/plugin-transform-react-inline-elements": "7.12.1",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
+    "@babel/preset-typescript": "7.16.0",
     "@babel/runtime": "7.14.0",
     "@lavamoat/allow-scripts": "1.0.3",
     "@nomiclabs/hardhat-ethers": "2.0.2",
@@ -278,11 +279,12 @@
     "babel-plugin-graphql-tag": "2.5.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-module-resolver": "4.0.0",
+    "babel-plugin-react-native-web": "0.17.5",
     "babel-plugin-rewire": "1.2.0",
     "babel-plugin-styled-components": "1.11.1",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "detox": "19.0.0",
     "chai": "4.2.0",
+    "detox": "19.0.0",
     "dotenv": "8.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
@@ -298,9 +300,14 @@
     "metro-plugin-anisotropic-transform": "rainbow-me/metro-plugin-anisotropic-transform#463b4ca9f5631f9c5e6028d22a450f6f0e54214f",
     "metro-react-native-babel-preset": "0.64.0",
     "next": "12.0.1",
+    "next-compose-plugins": "2.2.1",
+    "next-transpile-modules": "9.0.0",
     "node-vibrant": "3.2.1-alpha.1",
     "prettier": "2.2.1",
     "react-dom": "17.0.2",
+    "react-element-to-jsx-string": "14.3.4",
+    "react-native-web": "0.17.5",
+    "react-syntax-highlighter": "15.4.5",
     "react-test-renderer": "17.0.1",
     "rn-nodeify": "10.2.0",
     "schedule": "0.5.0",
