--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "detox:ios": "detox build -c ios.sim.debug && detox test -R 1 -c ios.sim.debug --bail",
     "detox:ios:release": "detox build -c ios.sim.release && detox test -R 1 -c ios.sim.release --bail",
     "ds": "cd src/design-system/docs && next dev",
+    "ds:playroom": "playroom start --config src/design-system/docs/playroom.config.js",
     "fast": "yarn setup && yarn install-pods-fast",
     "gradle": "cd android && ./gradlew",
     "hardhat": "source .env && hardhat node --fork ${ETHEREUM_MAINNET_RPC_DEV}",
@@ -254,6 +255,7 @@
     "@babel/plugin-transform-react-inline-elements": "7.12.1",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
+    "@babel/preset-react": "7.16.0",
     "@babel/preset-typescript": "7.16.0",
     "@babel/runtime": "7.14.0",
     "@lavamoat/allow-scripts": "1.0.3",
@@ -275,6 +277,7 @@
     "audit-ci": "3.1.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "26.6.3",
+    "babel-loader": "8.2.3",
     "babel-plugin-date-fns": "2.0.0",
     "babel-plugin-graphql-tag": "2.5.0",
     "babel-plugin-lodash": "3.3.4",
@@ -283,6 +286,7 @@
     "babel-plugin-rewire": "1.2.0",
     "babel-plugin-styled-components": "1.11.1",
     "babel-plugin-transform-remove-console": "6.9.4",
+    "base64-url": "2.3.3",
     "chai": "4.2.0",
     "detox": "19.0.0",
     "dotenv": "8.2.0",
@@ -292,17 +296,20 @@
     "eslint-import-resolver-babel-module": "5.3.1",
     "ethereum-waffle": "3.4.0",
     "ethers": "5.5.1",
+    "file-loader": "6.2.0",
     "graphql": "15.3.0",
     "hardhat": "2.6.7",
     "image-size": "1.0.0",
     "jest": "26.6.3",
     "jest-circus": "26.6.3",
+    "lz-string": "1.4.4",
     "metro-plugin-anisotropic-transform": "rainbow-me/metro-plugin-anisotropic-transform#463b4ca9f5631f9c5e6028d22a450f6f0e54214f",
     "metro-react-native-babel-preset": "0.64.0",
     "next": "12.0.1",
     "next-compose-plugins": "2.2.1",
     "next-transpile-modules": "9.0.0",
     "node-vibrant": "3.2.1-alpha.1",
+    "playroom": "0.27.7",
     "prettier": "2.2.1",
     "react-dom": "17.0.2",
     "react-element-to-jsx-string": "14.3.4",
