playing around w/ builds

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "detox:ios": "detox build -c ios.sim.debug && detox test -R 1 -c ios.sim.debug --bail",
     "detox:ios:release": "detox build -c ios.sim.release && detox test -R 1 -c ios.sim.release --bail",
     "ds": "cd src/design-system/docs && next dev",
+    "ds:build": "cd src/design-system/docs && next build && next export && yarn ds:playroom:build",
     "ds:playroom": "playroom start --config src/design-system/docs/playroom.config.js",
+    "ds:playroom:build": "playroom build --config src/design-system/docs/playroom.config.js",
     "fast": "yarn setup && yarn install-pods-fast",
     "gradle": "cd android && ./gradlew",
     "hardhat": "source .env && hardhat node --fork ${ETHEREUM_MAINNET_RPC_DEV}",
