--- a/package.json
+++ b/package.json
@@ -259,6 +259,7 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-typescript": "7.16.0",
     "@babel/runtime": "7.14.0",
+    "@capsizecss/vanilla-extract": "^1.0.0",
     "@lavamoat/allow-scripts": "1.0.3",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-waffle": "2.0.1",
