--- a/package.json
+++ b/package.json
@@ -289,6 +289,7 @@
     "babel-plugin-styled-components": "1.11.1",
     "babel-plugin-transform-remove-console": "6.9.4",
     "chai": "4.2.0",
+    "classnames": "^2.3.1",
     "detox": "19.0.0",
     "dotenv": "8.2.0",
     "eslint": "7.32.0",
