--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "detox:android:release": "detox build -c android.emu.release && detox test -R 1 -c android.emu.release",
     "detox:ios": "detox build -c ios.sim.debug && detox test -R 1 -c ios.sim.debug --bail",
     "detox:ios:release": "detox build -c ios.sim.release && detox test -R 1 -c ios.sim.release --bail",
-    "ds": "cd src/design-system/docs && next dev",
-    "ds:build": "cd src/design-system/docs && next build && next export && yarn ds:playroom:build",
+    "ds": "npm-run-all --print-label --parallel ds:*",
+    "ds:docs": "cd src/design-system/docs && next dev",
     "ds:playroom": "playroom start --config src/design-system/docs/playroom.config.js",
-    "ds:playroom:build": "playroom build --config src/design-system/docs/playroom.config.js",
     "fast": "yarn setup && yarn install-pods-fast",
     "gradle": "cd android && ./gradlew",
     "hardhat": "source .env && hardhat node --fork ${ETHEREUM_MAINNET_RPC_DEV}",
@@ -259,7 +258,7 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-typescript": "7.16.0",
     "@babel/runtime": "7.14.0",
-    "@capsizecss/vanilla-extract": "^1.0.0",
+    "@capsizecss/vanilla-extract": "1.0.0",
     "@lavamoat/allow-scripts": "1.0.3",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-waffle": "2.0.1",
@@ -289,7 +288,7 @@
     "babel-plugin-styled-components": "1.11.1",
     "babel-plugin-transform-remove-console": "6.9.4",
     "chai": "4.2.0",
-    "classnames": "^2.3.1",
+    "classnames": "2.3.1",
     "detox": "19.0.0",
     "dotenv": "8.2.0",
     "eslint": "7.32.0",
@@ -310,6 +309,7 @@
     "next-compose-plugins": "2.2.1",
     "next-transpile-modules": "9.0.0",
     "node-vibrant": "3.2.1-alpha.1",
+    "npm-run-all": "4.1.5",
     "playroom": "0.27.7",
     "prettier": "2.2.1",
     "react-dom": "17.0.2",
