--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "detox:android:release": "detox build -c android.emu.release && detox test -R 1 -c android.emu.release",
     "detox:ios": "detox build -c ios.sim.debug && detox test -R 1 -c ios.sim.debug --bail",
     "detox:ios:release": "detox build -c ios.sim.release && detox test -R 1 -c ios.sim.release --bail",
-    "ds": "npm-run-all --print-label --parallel ds:*",
-    "ds:docs": "cd src/design-system/docs && next dev",
-    "ds:playroom": "playroom start --config src/design-system/docs/playroom.config.js",
+    "ds": "cd src/design-system/docs && yarn dev",
     "fast": "yarn setup && yarn install-pods-fast",
     "gradle": "cd android && ./gradlew",
     "hardhat": "source .env && hardhat node --fork ${ETHEREUM_MAINNET_RPC_DEV}",
@@ -256,9 +254,7 @@
     "@babel/plugin-transform-react-inline-elements": "7.12.1",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
-    "@babel/preset-typescript": "7.16.0",
     "@babel/runtime": "7.14.0",
-    "@capsizecss/vanilla-extract": "1.0.0",
     "@lavamoat/allow-scripts": "1.0.3",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-waffle": "2.0.1",
@@ -278,17 +274,14 @@
     "audit-ci": "3.1.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "26.6.3",
-    "babel-loader": "8.2.3",
     "babel-plugin-date-fns": "2.0.0",
     "babel-plugin-graphql-tag": "2.5.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-module-resolver": "4.0.0",
-    "babel-plugin-react-native-web": "0.17.5",
     "babel-plugin-rewire": "1.2.0",
     "babel-plugin-styled-components": "1.11.1",
     "babel-plugin-transform-remove-console": "6.9.4",
     "chai": "4.2.0",
-    "classnames": "2.3.1",
     "detox": "19.0.0",
     "dotenv": "8.2.0",
     "eslint": "7.32.0",
@@ -302,20 +295,11 @@
     "image-size": "1.0.0",
     "jest": "26.6.3",
     "jest-circus": "26.6.3",
-    "lz-string": "1.4.4",
     "metro-plugin-anisotropic-transform": "rainbow-me/metro-plugin-anisotropic-transform#463b4ca9f5631f9c5e6028d22a450f6f0e54214f",
     "metro-react-native-babel-preset": "0.64.0",
-    "next": "12.0.1",
-    "next-compose-plugins": "2.2.1",
-    "next-transpile-modules": "9.0.0",
     "node-vibrant": "3.2.1-alpha.1",
-    "npm-run-all": "4.1.5",
-    "playroom": "0.27.7",
     "prettier": "2.2.1",
     "react-dom": "17.0.2",
-    "react-element-to-jsx-string": "14.3.4",
-    "react-native-web": "0.17.5",
-    "react-syntax-highlighter": "15.4.5",
     "react-test-renderer": "17.0.1",
     "rn-nodeify": "10.2.0",
     "schedule": "0.5.0",
@@ -488,5 +472,10 @@
       "postinstall-postinstall": false,
       "core-js-pure": false
     }
+  },
+  "workspaces": {
+    "packages": [
+      "src/design-system/*"
+    ]
   }
 }
