--- a/src/design-system/docs/package.json
+++ b/src/design-system/docs/package.json
@@ -6,7 +6,9 @@
     "dev": "npm-run-all --print-label --parallel dev:*",
     "dev:docs": "next dev",
     "dev:playroom": "playroom start",
-    "build": "next build",
+    "build": "yarn build:docs && yarn build:playroom",
+    "build:docs": "next build && next export",
+    "build:playroom": "playroom build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "7.16.0",
     "@capsizecss/vanilla-extract": "1.0.0",
+    "@vanilla-extract/next-plugin": "1.0.1",
     "babel-loader": "8.2.3",
     "babel-plugin-react-native-web": "0.17.5",
     "classnames": "2.3.1",
