--- a/src/design-system/docs/package.json
+++ b/src/design-system/docs/package.json
@@ -19,6 +19,7 @@
     "lodash": "4.17.21",
     "lz-string": "1.4.4",
     "next": "12.0.4",
+    "prettier": "2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-element-to-jsx-string": "14.3.4"
